refactor: Remove unused files and methods
